
*HAVP 0.82 released
 - Improved ZIP handling (header pre-fetch, scans ZIPs larger than MAXSCANSIZE)
 - Added SCANIMAGES config
 - Ignore RAR errors from clamd
 - Fixes to HTTP header handling
 - Added syslog logging option
 - Signal HUP re-opens logfiles, making rotation possible

*HAVP 0.81 released
 - Fixed binding to low ports (<1024)
 - Fixed FreeBSD, downloads that took longer than TRICKLING did not work

*HAVP 0.80 released
 - Experimental FreeBSD support (no mandatory locking, KEEPBACK not supported!)
 - Avast! scanner support
 - Added MAXDOWNLOADSIZE config
 - Added X_FORWARD_FOR config to control the header
 - Added some archive scanning parameters for Trophie
 - Added TCP support for clamd
 - Ignore RAR errors from ClamAV (use ClamAV-devel if you want to scan RARv3)
 - Fixed bug in socket buffer, sometimes caused nasty effects with POST etc.
 - Fixed KeepAlive for HTTP/1.1 clients, now on by default
 - Access logging format changed a bit

*HAVP 0.79 released
 - MULTIPLE SCANNER SUPPORT! (see havp.config how to enable scanners)
 - NOD32, Sophos and Clamd scanner support
 - Parentproxy error on SSL tunneling is passed to browser
 - Whitelisted sites can use HTTP Range requests (for Windowsupdate..)
 - Added STREAMUSERAGENT/STREAMSCANSIZE config to reduce stream scanning
 - Added SCANNERTIMEOUT option to catch scanners gone wild
 - Added scanning options for ClamLib
 - Some HTTP header handling fixes
 - Init-script updated so it works on Solaris

*HAVP 0.78 released
 - Solaris is now supported too
 - AVG scanner support
 - Kaspersky aveserver socket support (faster)
 - Added TEMPDIR, LOGLEVEL, FAILSCANERROR and WHITELISTFIRST config
 - KEEPBACKTIME config added to complement KEEPBACKBUFFER setting
 - Basic HTTP Keep-Alive support, improves network performance
 - HTTPS/SSL tunneling support (requires configure --enable-ssl-tunnel)
 - FTP is supported and scanned when FTP supporting parent proxy is used
 - Default user and group changed to havp