@@ -90,7 +90,7 @@ REMOVETHISLINE deleteme
 #  1 = Less interesting information is included
 #
 # Default:
-# LOGLEVEL 1
+# LOGLEVEL 0
 
 #
 # Temporary scan file.
@@ -226,6 +226,8 @@ REMOVETHISLINE deleteme
 # Timer is started after HAVP has fully received all data.
 # If set too low, complex files/archives might produce timeout.
 # Timeout is always a fatal error regardless of FAILSCANERROR.
+#
+# Time in minutes!
 #
 # Default:
 # SCANNERTIMEOUT 10
